# selfmade-dl-framework

./: .gitattributes  .gitignore  CMakeLists.txt  changelog.md  demo.cpp  demo.cu  main.cpp  readme.md
nn/: backend.h  backend_legacy.h  base_model.h  except.h  model.h  nn.h  scheduler.h  tensor.h
nn/backend/: align.h  autograd.h  autograd_engine.h  base_backend.h  base_kernel.h  dispatcher.h  kernel_dispatcher.h  kernels.h  mem_pool.h  tensor.h  tensor_interface.h  utils.h
nn/backend/cpu/: arch.h  constants.h  conv.h  ewise.h  gemm.h  mem_pool.h  ndim.h  thread_pool.h
nn/backend/cpu/operators/: common.h  conv.h  gemm.h
nn/backend/cuda/: arch.cuh
nn/backend/cuda/operators/: common.cuh  conv.cuh  gemm.cuh
nn/codegen/: cfl_grammar.py  codegen.py  config.json  interface.generated.json
nn/codegen/templates/: autograd_decl.h.j2  autograd_impl.h.j2  interface_decl.h.j2  interface_impl.h.j2  procedure.h.j2  style.j2
nn/dataset/: mnist.h
nn/layer/: base_layer.h  conv.h  fc.h  flatten.h  maxpool.h  relu.h
nn/optimizer/: adam.h  base_optimizer.h  sgd.h
nn/tensor/: autograd.h  autograd_base.h  autograd_engine.h  interface.h  tensor_impl.h
utils/: progress_bar.h
